Fix for visibility of target areas on patient body on MainUi

--- a/css/PeregrineStyle.css
+++ b/css/PeregrineStyle.css
@@ -100,6 +100,7 @@ Body Buttons
 #rLungicon,#lLungicon,#subxicon,#ruqicon,#luqicon,#bladdericon {
    z-index:1;
    height:2vw;;
+   background-color: white;
 }
 
 
